# utilitybill-pipeline

./: .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
src/: config.py  metrics.py  pipeline.py
src/api/: fastapi_app.py
src/cli/: run_pipeline.py
src/enrich/: external_api.py
src/extract/: __init__.py  custom.py  docai_client.py  gemini_client.py  ocr.py  utils.py
src/ingest/: loader.py  models.py
src/store/: bigquery.py  dvs_client.py
src/transform/: clean.py
src/utilitybill_pipeline.egg-info/: SOURCES.txt  top_level.txt
src/validate/: match.py  rules.py  schema.py
src/worker/: human_review.py  task_executor.py
terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
tests/: conftest.py  test_extract.py  test_monitoring.py  test_pipeline.py
utilitybill_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
